added css and js file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <meta name="author" content="Josh Burton">
+    <meta name="description" content="This is a page to show my favorite types of music and to also help me work on my programming skills.">
+    <link rel="tab icon" href="favicon.ico" type="image/headphones-silhouette">
+    <link rel="stylesheet" href="stylefile.css">
+    <title>My Music Page</title>
 </head>
 
 <body>
-
+    <h1>Hey! This be my little web page</h1>
+    <p>I like to listen to all types of music and go to as many
+        <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
+    <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
+    <script src="app.js"></script>
 </body>
 
 </html>
