--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 </head>
 
 <body>
+
+    <ol>
+        <li>Home</li>
+        <li>
+            <a href="pictures.html">Pictures</a>
+        </li>
+        <li>
+            <a href="projects.html">Projects</a>
+        </li>
+        <li>
+            <a href="social.html">Social</a>
+        </li>
+    </ol>
+
     <h1>Hey! This be my little web page</h1>
     <p>I like to listen to all types of music and go to as many
         <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
