added email link

--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
             <a href="social.html">Social</a>
         </li>
     </ol>
-
+    <a href="mailto:jburton8686@hotmail.com">
+        Send mail to me!
+    </a>
     <h1>Hey! This be my little web page</h1>
     <p>I like to listen to all types of music and go to as many
         <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
     <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
     <script src="app.js"></script>
+
 </body>
 
 </html>
