added nav bar and search box

--- a/index.html
+++ b/index.html
@@ -13,23 +13,35 @@
 </head>
 
 <body>
+    <header>
+        <h1>Welcome to my Page!</h1>
+    </header>
+    <nav>
+        <ol>
+            <li>
+                <a href="#"></a>Home</li>
+            <li>
+                <a href="pictures.html">Pictures</a>
+            </li>
+            <li>
+                <a href="projects.html">Projects</a>
+            </li>
+            <li>
+                <a href="social.html">Social</a>
+            </li>
+        </ol>
 
-    <ol>
-        <li>Home</li>
-        <li>
-            <a href="pictures.html">Pictures</a>
-        </li>
-        <li>
-            <a href="projects.html">Projects</a>
-        </li>
-        <li>
-            <a href="social.html">Social</a>
-        </li>
-    </ol>
+        <form>
+            <input type="search" name="q" placeholder="Search query">
+            <input type="submit" value="Go!">
+        </form>
+    </nav>
+    </br>
+
     <a href="mailto:jburton8686@hotmail.com">
         Send mail to me!
     </a>
-    <h1>Hey! This be my little web page</h1>
+    <h3>Hey! This be my little web page</h3>
     <p>I like to listen to all types of music and go to as many
         <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
     <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
