--- a/pictures.html
+++ b/pictures.html
@@ -26,7 +26,7 @@
     </ol>
     <h1>Pictures</h1>
 
-    <p>My pictures will go here, when I start taking some.</p>
+    <p>This is in my backyard!.</p>
     <img src="./static/img/2-saatyphotography.com_.jpg" />
     <script src="app.js"></script>
 
