--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>Welcome to my Page!</h1>
     </header>
     <nav>
-        <ol>
+        <ul>
             <li>
                 <a href="#"></a>Home</li>
             <li>
@@ -29,7 +29,7 @@
             <li>
                 <a href="social.html">Social</a>
             </li>
-        </ol>
+        </ul>
 
         <form>
             <input type="search" name="q" placeholder="Search query">
@@ -41,11 +41,41 @@
     <a href="mailto:jburton8686@hotmail.com">
         Send mail to me!
     </a>
-    <h3>Hey! This be my little web page</h3>
-    <p>I like to listen to all types of music and go to as many
-        <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
-    <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
-    <script src="app.js"></script>
+
+    <main>
+        <article>
+            <h3>Hey! This be my little web page</h3>
+            <p>I like to listen to all types of music and go to as many
+                <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
+            <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
+            <script src="app.js"></script>
+        </article>
+        <aside>
+            <h2>Related</h2>
+
+            <ul>
+                <li>
+                    <a href="#">blank</a>
+                </li>
+                <li>
+                    <a href="#">blank</a>
+                </li>
+                <li>
+                    <a href="#">blank</a>
+                </li>
+                <li>
+                    <a href="#">blank</a>
+                </li>
+                <li>
+                    <a href="#">blank</a>
+                </li>
+            </ul>
+        </aside>
+    </main>
+
+    <footer>
+        <p>©Copyright 2018 by me. All rights reversed.</p>
+    </footer>
 
 </body>
 
