added style elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <nav>
         <ul>
             <li>
-                <a href="#"></a>Home</li>
+                <span>Home</span>
+            </li>
+            <!-- <a href=></a>Home</li> -->
             <li>
                 <a href="pictures.html">Pictures</a>
             </li>
@@ -31,24 +33,17 @@
             </li>
         </ul>
 
-        <form>
-            <input type="search" name="q" placeholder="Search query">
-            <input type="submit" value="Go!">
-        </form>
     </nav>
     </br>
-
-    <a href="mailto:jburton8686@hotmail.com">
-        Send mail to me!
-    </a>
 
     <main>
         <article>
             <h3>Hey! This be my little web page</h3>
-            <p>I like to listen to all types of music and go to as many
-                <strong> shows</strong> as I can. The last show I went to was the Wind and the Wave.</p>
+            <p>I like to listen to all types of music and go to as many shows as I can. The last show I went to was the Wind
+                and the Wave.</p>
+        </article>
+        <article>
             <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
-            <script src="app.js"></script>
         </article>
         <aside>
             <h2>Related</h2>
@@ -71,10 +66,14 @@
                 </li>
             </ul>
         </aside>
+
     </main>
 
     <footer>
+        <a href="mailto:jburton8686@hotmail.com">
+            Send mail to me!</a>
         <p>©Copyright 2018 by me. All rights reversed.</p>
+
     </footer>
 
 </body>
