--- a/pictures.html
+++ b/pictures.html
@@ -12,24 +12,44 @@
 
 <body>
     <!-- put navigation menu just below here -->
-    <ol>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>Pictures</li>
-        <li>
-            <a href="projects.html">Projects</a>
-        </li>
-        <li>
-            <a href="social.html">Social</a>
-        </li>
-    </ol>
-    <h1>Pictures</h1>
+    <header>
+        <h1>Pictures</h1>
+    </header>
 
-    <p>This is in my backyard!.</p>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <span>Pictures</span>
+            </li>
+            <li>
+                <a href="projects.html">Projects</a>
+            </li>
+            <li>
+                <a href="social.html">Social</a>
+            </li>
+        </ul>
+    </nav>
+    </br>
+
+    <main>
+        <article>
+            <h2>Random heading</h2>
+            <p>This is in my backyard!.</p>
+        </article>
+
+    </main>
+
+    <h2>Superstition Mountains</h2>
     <img src="./static/img/2-saatyphotography.com_.jpg" />
-    <script src="app.js"></script>
+    <footer>
+        <a href="mailto:jburton8686@hotmail.com">
+            Send mail to me!</a>
+        <p>©Copyright 2018 by me. All rights reversed.</p>
 
+    </footer>
 </body>
 
 </html>
