--- a/projects.html
+++ b/projects.html
@@ -8,21 +8,28 @@
     <title>Projects</title>
 </head>
 
+<header>
+    <h1>My projects</h1>
+</header>
+
 <body>
     <!-- put navigation menu just below here -->
-    <ol>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="pictures.html">Pictures</a>
-        </li>
-        <li>Projects</li>
-        <li>
-            <a href="social.html">Social</a>
-        </li>
-    </ol>
-    <h1>My projects</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="pictures.html">Pictures</a>
+            </li>
+            <li>
+                <span>Projects</span>
+            </li>
+            <li>
+                <a href="social.html">Social</a>
+            </li>
+        </ul>
+    </nav>
 
     <p>Welcome to my project page, showing what exciting things I am currently doing.</p>
 </body>
