--- a/social.html
+++ b/social.html
@@ -8,21 +8,28 @@
     <title>Social</title>
 </head>
 
+<header>
+    <h1>Social</h1>
+</header>
+
 <body>
     <!-- put navigation menu just below here -->
-    <ol>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="pictures.html">Pictures</a>
-        </li>
-        <li>
-            <a href="projects.html">Projects</a>
-        </li>
-        <li>Social</li>
-    </ol>
-    <h1>Social media</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="pictures.html">Pictures</a>
+            </li>
+            <li>
+                <a href="projects.html">Projects</a>
+            </li>
+            <li>
+                <span>Social</span>
+            </li>
+        </ul>
+    </nav>
 
     <p>Welcome to my social media page. I am currently antisocial, but will start putting my social media widgets on here when
         the time is right.</p>
