--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Josh Burton">
     <meta name="description" content="This is a page to show my favorite types of music and to also help me work on my programming skills.">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative:700" rel="stylesheet">
     <link rel="tab icon" href="favicon.ico" type="image/headphones-silhouette">
     <link rel="stylesheet" href="stylefile.css">
     <title>My Music Page</title>
@@ -72,7 +73,7 @@
     <footer>
         <a href="mailto:jburton8686@hotmail.com">
             Send mail to me!</a>
-        <p>©Copyright 2018 by me. All rights reversed.</p>
+        <p>@Copywrong 2018 by me. All rights reversed.</p>
 
     </footer>
 
