added logo and adjusted header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <header>
         <h1>Welcome to my Page!</h1>
+        <img src="wolf.png" alt="a b logo">
     </header>
     <nav>
         <ul>
@@ -40,8 +41,8 @@
     <main>
         <article>
             <h3>Hey! This be my little web page</h3>
-            <p>I like to listen to all types of music and go to as many shows as I can. The last show I went to was the Wind
-                and the Wave.</p>
+            <p>I like to listen to all types of music and go to as many live shows as I can. The last show I went to was the
+                Wind and the Wave.</p>
         </article>
         <article>
             <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
