--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <ul>
                 <li>
-                    <a href="#">blank</a>
+                    <a href="http://thewindandthewave.com/" target="_blank">The W + The W</a>
                 </li>
                 <li>
                     <a href="#">blank</a>
