changed home pg pic

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 Wind and the Wave.</p>
         </article>
         <article>
-            <img src="https://pbs.twimg.com/profile_images/734879969986400260/OE22ynXc_400x400.jpg">
+            <img src="wwpic.jpg">
         </article>
         <aside>
             <h2>Related</h2>
