added some items

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <article>
             <h3>Hey! This be my little web page</h3>
             <p>I like to listen to all types of music and go to as many live shows as I can. The last show I went to was the
-                Wind and the Wave.</p>
+                Wind and the Wave. They are a Band out of Austin, Tx. They put on a really great live show. They are also
+                really down to earth and very accessible to talk with and sign stuff after thier shows.</p>
         </article>
         <article>
             <img src="wwpic.jpg">
@@ -58,17 +59,32 @@
                     <a href="#">blank</a>
                 </li>
                 <li>
-                    <a href="#">blank</a>
+                    <a href="#">blankety</a>
                 </li>
                 <li>
-                    <a href="#">blank</a>
+                    <a href="#">blankety..blank</a>
                 </li>
                 <li>
-                    <a href="#">blank</a>
+                    <a href="#">blank. blank.</a>
                 </li>
             </ul>
         </aside>
 
+    </main>
+    <main>
+        <article>
+            <h3>Next paragraph</h3>
+            <p>Some rando stuff...</p>
+            <p>blah blah blah</p>
+            <p>Some more rando stuff...</p>
+            <p>blah blah blah</p>
+        </article>
+        <article>
+            <img src="diamond.png">
+        </article>
+        <aside>
+
+        </aside>
     </main>
 
     <footer>
