changed styling and page size. changed pics

--- a/pictures.html
+++ b/pictures.html
@@ -37,13 +37,13 @@
     <main>
         <article>
             <h2>Random heading</h2>
-            <p>This is in my backyard!.</p>
+            <p>This AZ!.</p>
         </article>
 
     </main>
 
-    <h2>Superstition Mountains</h2>
-    <img src="./static/img/2-saatyphotography.com_.jpg" />
+    <h2>Grand Canyon at night</h2>
+    <img src="milky-way.jpg" />
     <footer>
         <a href="mailto:jburton8686@hotmail.com">
             Send mail to me!</a>
