added color changes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <p>@Copywrong 2018 by me. All rights reversed.</p>
 
     </footer>
-
+    <script src="app.js"></script>
 </body>
 
 </html>
