--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <p>Some more rando stuff...</p>
             <p>blah blah blah</p>
         </article>
-        <article>
+        <!-- <article>
             <img src="diamond.png">
-        </article>
+        </article> -->
         <aside>
 
         </aside>
