--- a/pictures.html
+++ b/pictures.html
@@ -14,6 +14,7 @@
     <!-- put navigation menu just below here -->
     <header>
         <h1>Pictures</h1>
+        <img src="wolf.png" alt="a b logo">
     </header>
 
     <nav>
