--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,14 @@
     </nav>
 
     <p>Welcome to my project page, showing what exciting things I am currently doing.</p>
+
+    <footer>
+        <a href="mailto:jburton8686@hotmail.com">
+            Send mail to me!</a>
+        <p>©Copyright 2018 by me. All rights reversed.</p>
+
+    </footer>
+
 </body>
 
 </html>
