--- a/social.html
+++ b/social.html
@@ -34,6 +34,14 @@
 
     <p>Welcome to my social media page. I am currently antisocial, but will start putting my social media widgets on here when
         the time is right.</p>
+
+    <footer>
+        <a href="mailto:jburton8686@hotmail.com">
+            Send mail to me!</a>
+        <p>©Copyright 2018 by me. All rights reversed.</p>
+
+    </footer>
+
 </body>
 
 </html>
