added profile pic

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>Welcome to my Page!</h1>
-        <img src="wolf.png" alt="a b logo">
+        <img src="headshot.jpg" alt="a b logo">
     </header>
     <nav>
         <ul>
