added social media links to my page.

--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="tab icon" href="favicon.ico" type="image/headphones-silhouette">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylefile.css">
     <title>Projects</title>
 </head>
@@ -38,6 +39,10 @@
         <a href="mailto:jburton8686@hotmail.com">
             Send mail to me!</a>
         <p>©Copyright 2018 by me. All rights reversed.</p>
+        </br>
+        <a class="fa fa-facebook" href="https://www.facebook.com/josh.burton.5496" target="_blank"></a>
+        <a class="fa fa-linkedin" href="https://www.linkedin.com/in/joshua-burton1" target="blank"></a>
+        <a class="fa fa-github" href="https://www.github.com/jburton8686" target="blank"></a>
 
     </footer>
 
