--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="This is a page to show my favorite types of music and to also help me work on my programming skills.">
     <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative:700" rel="stylesheet">
     <link rel="tab icon" href="favicon.ico" type="image/headphones-silhouette">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylefile.css">
     <title>My Music Page</title>
 </head>
@@ -91,6 +92,10 @@
         <a href="mailto:jburton8686@hotmail.com">
             Send mail to me!</a>
         <p>@Copywrong 2018 by me. All rights reversed.</p>
+        </br>
+        <a class="fa fa-facebook" href="https://www.facebook.com/josh.burton.5496" target="_blank"></a>
+        <a class="fa fa-linkedin" href="https://www.linkedin.com/in/joshua-burton1" target="blank"></a>
+        <a class="fa fa-github" href="https://www.github.com/jburton8686" target="blank"></a>
 
     </footer>
     <script src="app.js"></script>
