--- a/pictures.html
+++ b/pictures.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="tab icon" href="favicon.ico" type="image/headphones-silhouette">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylefile.css">
     <title>Pictures</title>
 </head>
@@ -49,6 +50,10 @@
         <a href="mailto:jburton8686@hotmail.com">
             Send mail to me!</a>
         <p>©Copyright 2018 by me. All rights reversed.</p>
+        </br>
+        <a class="fa fa-facebook" href="https://www.facebook.com/josh.burton.5496" target="_blank"></a>
+        <a class="fa fa-linkedin" href="https://www.linkedin.com/in/joshua-burton1" target="blank"></a>
+        <a class="fa fa-github" href="https://www.github.com/jburton8686" target="blank"></a>
 
     </footer>
 </body>
